--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "@playwright/test": "^1.55.0",
     "axios": "^1.5.0",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "helmet": "^7.0.0",
     "rate-limiter-flexible": "^2.4.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "keywords": [
