--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "build": "echo 'No build step required for Express app'",
     "test": "jest",
     "test:watch": "jest --watch"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
     "@playwright/test": "^1.55.0",
