--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "echo 'No build step required for Express app'",
+    "build:gh-pages": "cp -r public/* . && echo 'Static files copied for GitHub Pages'",
+    "deploy": "npm run build:gh-pages && gh-pages -d .",
+    "predeploy": "npm run build:gh-pages",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -24,6 +27,7 @@
     "rate-limiter-flexible": "^2.4.2"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
